samples/_failures_safe/1761266559_9e992c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_388bc312.c: In function ‘print_analysis’:
./samples/SAFE/__tmp_388bc312.c:150: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_388bc312.c:149:5: error: expected declaration or statement at end of input
  149 |     if
      |     ^~
